# auto-reservation

./: .gitignore  README.md  pyproject.toml
src/: dpsn.ipynb  dpsn.py  gmail_auto.ipynb  keyescape.ipynb  keyescape.py  main.ipynb
