# /pyproject.toml

[tool.poetry]
name = "auto-reservation"
version = "0.0.1"
description = "macro program for reservation"
authors = ["Jinhyuck Cha <ckwlsgur20@naver.com>"]
readme = "README.md"
packages = [{ include = "**/*" }]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
selenium = "*"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs/
  | \.git/
  | \.tox/
  | \.venv/
  | _build/
  | build/
  | dist/
  | venv/
)
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
